test/parser/func_decl_eof2.0.stderr
<source>:3:7: error: expected parameter declarator
    3 | fn f6(,
      |       ^
<source>:3:8: error: expected parameter declarator
    3 | fn f6(,
      |        ^
<source>:3:8: error: expected ')', found 'EOF'
